test(compose): add real SQL parity coverage