@@ -10,7 +10,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -28,8 +33,8 @@ public class ComparativeExecutionIntegrationTest extends EcommerceTestSupport {
     private static final String TEST_MODEL = "FactSalesQueryModel";
 
     @Test
-    @DisplayName("S8.6 YoY execution on FactSalesModel returns diff and ratio")
-    void testYoYExecution() {
+    @DisplayName("S8.6 YoY execution matches hand-written SQL")
+    void testYoYExecutionMatchesSql() {
         SemanticQueryRequest request = new SemanticQueryRequest();
         
         // Group by year and month
@@ -39,10 +44,10 @@ public class ComparativeExecutionIntegrationTest extends EcommerceTestSupport {
         SemanticQueryRequest.GroupByItem monthGroup = new SemanticQueryRequest.GroupByItem();
         monthGroup.setField("salesDate$month");
         
-        request.setGroupBy(Arrays.asList(yearGroup, monthGroup));
+        request.setGroupBy(List.of(yearGroup, monthGroup));
         
         // Query the timeWindow dynamically generated columns
-        request.setColumns(Arrays.asList(
+        request.setColumns(List.of(
                 "salesDate$year", 
                 "salesDate$month", 
                 "salesAmount", 
@@ -55,7 +60,8 @@ public class ComparativeExecutionIntegrationTest extends EcommerceTestSupport {
         Map<String, Object> timeWindow = Map.of(
                 "field", "salesDate$id",
                 "grain", "month",
-                "comparison", "yoy"
+                "comparison", "yoy",
+                "targetMetrics", List.of("salesAmount")
         );
         request.setTimeWindow(timeWindow);
         
@@ -70,14 +76,61 @@ public class ComparativeExecutionIntegrationTest extends EcommerceTestSupport {
         assertNotNull(response.getItems());
         
         log.info("Returned rows: {}", response.getItems().size());
-        if (!response.getItems().isEmpty()) {
-            Map<String, Object> firstRow = response.getItems().get(0);
-            log.info("First row: {}", firstRow);
-            
-            assertTrue(firstRow.containsKey("salesAmount"));
-            assertTrue(firstRow.containsKey("salesAmount__prior"));
-            assertTrue(firstRow.containsKey("salesAmount__diff"));
-            assertTrue(firstRow.containsKey("salesAmount__ratio"));
+        List<Map<String, Object>> expected = executeQuery("""
+                WITH monthly AS (
+                    SELECT d.year AS "salesDate$year",
+                           d.month AS "salesDate$month",
+                           SUM(fs.sales_amount) AS "salesAmount"
+                    FROM fact_sales fs
+                    LEFT JOIN dim_date d ON fs.date_key = d.date_key
+                    GROUP BY d.year, d.month
+                )
+                SELECT cur."salesDate$year",
+                       cur."salesDate$month",
+                       cur."salesAmount",
+                       prior."salesAmount" AS "salesAmount__prior",
+                       cur."salesAmount" - prior."salesAmount" AS "salesAmount__diff",
+                       CASE
+                           WHEN prior."salesAmount" IS NULL OR prior."salesAmount" = 0 THEN NULL
+                           ELSE (cur."salesAmount" - prior."salesAmount") / prior."salesAmount"
+                       END AS "salesAmount__ratio"
+                FROM monthly cur
+                LEFT JOIN monthly prior
+                       ON cur."salesDate$year" = prior."salesDate$year" + 1
+                      AND cur."salesDate$month" = prior."salesDate$month"
+                """);
+
+        assertRowsEqual(expected, response.getItems());
+    }
+
+    private static void assertRowsEqual(List<Map<String, Object>> expected, List<Map<String, Object>> actual) {
+        assertFalse(actual.isEmpty(), "actual result should not be empty");
+        assertEquals(canonicalRows(expected), canonicalRows(actual));
+    }
+
+    private static List<Map<String, String>> canonicalRows(List<Map<String, Object>> rows) {
+        List<Map<String, String>> canonical = new ArrayList<>();
+        for (Map<String, Object> row : rows) {
+            Map<String, String> normalized = new LinkedHashMap<>();
+            row.entrySet().stream()
+                    .sorted(Map.Entry.comparingByKey())
+                    .forEach(entry -> normalized.put(entry.getKey(), canonicalValue(entry.getValue())));
+            canonical.add(normalized);
         }
+        canonical.sort(Comparator.comparing(Map::toString));
+        return canonical;
+    }
+
+    private static String canonicalValue(Object value) {
+        if (value == null) {
+            return "<null>";
+        }
+        if (value instanceof Number) {
+            return new BigDecimal(value.toString())
+                    .setScale(6, RoundingMode.HALF_UP)
+                    .stripTrailingZeros()
+                    .toPlainString();
+        }
+        return value.toString();
     }
 }
